# ster

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: bump_version.py
ster/: __init__.py  _version.py  ai.py  analysis_cache.py  cli.py  display.py  exceptions.py  git_log.py  git_log_logic.py  git_manager.py  handles.py  help.py  html_export.py  model.py  nav.py  nav_logic.py  nav_state.py  operations.py  owl_analysis.py  project.py  prompts.py  sparql_query.py  store.py  taxonomy.ttl  taxonomy_analysis.py  validator.py  viz.py  wind-bigood.ttl  wizard.py  workspace.py  workspace_ops.py
ster/git/: __init__.py  log.py  log_logic.py
ster/nav/: __init__.py  draw.py  editor.py  help.py  logic.py  prefs.py  query_logic.py  shell.py  state.py  viewer.py
tests/: conftest.py  test_ai.py  test_cli.py  test_display.py  test_git_log.py  test_git_log_logic.py  test_git_manager.py  test_handles.py  test_help.py  test_html_export.py  test_model.py  test_nav.py  test_nav_draw.py  test_nav_logic.py  test_nav_state.py  test_operations.py  test_owl_analysis.py  test_sparql_query.py  test_store.py  test_taxonomy_analysis.py  test_viz.py  test_wizard.py  test_workspace.py
