[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "ster"
version = "0.1.0"
description = "Interactive terminal editor for SKOS taxonomy files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# ── Core runtime dependencies ─────────────────────────────────────────────────
#
#   rdflib  — RDF parsing / serialisation (.ttl, .rdf, .jsonld)
#   typer   — CLI framework  (the [all] extra pulls in rich + shellingham)
#   rich    — terminal rendering: colours, tables, prompts
#
dependencies = [
    "rdflib>=7.0",
    "typer[all]>=0.12",
    "rich>=13.0",
]

# ── Optional dependency groups ────────────────────────────────────────────────
#
#   html  — HTML export via pyLODE's VocPub profile
#             install:  pip install "ster[html]"
#
#   dev   — test suite
#             install:  pip install "ster[dev]"
#
#   all   — everything
#             install:  pip install "ster[all]"
#
[project.optional-dependencies]
html = [
    "pylode>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "ster[html]",
    "ster[dev]",
]

# ── Entry points ──────────────────────────────────────────────────────────────

[project.scripts]
ster = "ster.cli:main"

# ── Project URLs ──────────────────────────────────────────────────────────────

[project.urls]
Homepage   = "https://github.com/gbelbe/ster"
Repository = "https://github.com/gbelbe/ster"
Issues     = "https://github.com/gbelbe/ster/issues"

# ── Test configuration ────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"

[tool.coverage.run]
source = ["ster"]
