[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "ster"
version = "0.1.0"
description = "Interactive terminal editor for SKOS taxonomy files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# ── Core runtime dependencies ─────────────────────────────────────────────────
#
#   rdflib  — RDF parsing / serialisation (.ttl, .rdf, .jsonld)
#   typer   — CLI framework  (the [all] extra pulls in rich + shellingham)
#   rich    — terminal rendering: colours, tables, prompts
#
dependencies = [
    "rdflib>=7.0",
    "typer[all]>=0.12",
    "rich>=13.0",
]

# ── Optional dependency groups ────────────────────────────────────────────────
#
#   html  — HTML export via pyLODE's VocPub profile
#             install:  pip install "ster[html]"
#
#   dev   — test suite + all linting / security tools (mirrors CI)
#             install:  pip install "ster[dev]"
#
#   all   — everything
#             install:  pip install "ster[all]"
#
[project.optional-dependencies]
html = [
    "pylode>=3.0",
]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Linting & formatting
    "ruff>=0.4",
    # Type checking
    "mypy>=1.10",
    # Security
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
]
all = [
    "ster[html]",
    "ster[dev]",
]

# ── Entry points ──────────────────────────────────────────────────────────────

[project.scripts]
ster = "ster.cli:main"

# ── Project URLs ──────────────────────────────────────────────────────────────

[project.urls]
Homepage   = "https://github.com/gbelbe/ster"
Repository = "https://github.com/gbelbe/ster"
Issues     = "https://github.com/gbelbe/ster/issues"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source   = ["ster"]
omit     = ["ster/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py311"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names…)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (likely bugs / design issues)
    "C4",  # flake8-comprehensions (cleaner list/dict/set comprehensions)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "B008",   # do not perform function calls in argument defaults (Typer pattern)
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is fine in tests
]

# ── Mypy (type checker) ───────────────────────────────────────────────────────
# Docs: https://mypy.readthedocs.io/

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true   # external libs without stubs (rdflib, pylode…)
warn_return_any       = false   # too noisy for progressive adoption
warn_unused_ignores   = true
pretty                = true

# ── Bandit (security SAST) ────────────────────────────────────────────────────
# Docs: https://bandit.readthedocs.io/

[tool.bandit]
exclude_dirs = ["tests"]
skips        = [
    "B101",  # assert — used for type-narrowing, not security-critical
    "B603",  # subprocess — called with controlled, non-user-supplied args
    "B607",  # subprocess partial path — pip/pylode are trusted system tools
]
